--- a/translator-b/.env
+++ b/translator-b/.env
@@ -1,6 +1,7 @@
 MONGO_URI="mongodb+srv://VishalGaikwad:lKXStBA66dQusah9@cluster-translator.l06wjzp.mongodb.net/"
 
-GOOGLE_TRANSLATE_API_KEY=AIzaSyATSWPhv9Ntdpwl4vYFGmUDHDallw6bFvY
-    
+
+FRONTEND_URL="http://localhost:5173"
+VITE_BACKEND_URL="http://localhost:3001/"
 
 JWT_SECRET="i"
