--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "start": "vite preview"
+},
   "dependencies": {
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
