update ot google

--- a/translator-b/.env
+++ b/translator-b/.env
@@ -2,6 +2,6 @@ MONGO_URI="mongodb+srv://VishalGaikwad:lKXStBA66dQusah9@cluster-translator.l06wj
 
 
 FRONTEND_URL="http://localhost:5173"
-VITE_BACKEND_URL=https://translator-3-w6hg.onrender.com
+VITE_BACKEND_URL=https://translator-4-8ytv.onrender.com
 
 JWT_SECRET="i"
