--- a/translator-b/.env
+++ b/translator-b/.env
@@ -5,3 +5,6 @@ FRONTEND_URL="http://localhost:5173"
 VITE_BACKEND_URL=https://translator-4-8ytv.onrender.com
 
 JWT_SECRET="i"
+
+
+GOOGLE_API_KEY=AIzaSyBQNFkYZNr_vJBpm4ZwF68BTIzMkTo6C_4
