--- a/translator-b/.env
+++ b/translator-b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://thevishalgaikwad8:S0Q9ZySF0SLaDZkH@translator.tcvdh0k.mongodb.net/"
+MONGO_URI="mongodb+srv://VishalGaikwad:UY3s687fTG3Luekk@cluster-translator.l06wjzp.mongodb.net/"
 
 
 FRONTEND_URL="http://localhost:5173"
