--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -9,14 +9,20 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.485.0",
+    "mongoose": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0",
-    "tesseract.js": "^6.0.1"
+    "react-router-dom": "^7.5.3",
+    "socket.io-client": "^4.8.1",
+    "tesseract.js": "^6.0.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
