--- a/translator-b/.env
+++ b/translator-b/.env
@@ -1,10 +1,5 @@
-MONGO_URI="mongodb+srv://VishalGaikwad:UY3s687fTG3Luekk@cluster-translator.l06wjzp.mongodb.net/"
-
-
-FRONTEND_URL="http://localhost:5173"
-VITE_BACKEND_URL=https://translator-4-8ytv.onrender.com
-
-JWT_SECRET="i"
-
-
-GOOGLE_API_KEY=AIzaSyBQNFkYZNr_vJBpm4ZwF68BTIzMkTo6C_4
+PORT=3001
+MONGO_URI=mongodb+srv://VishalGaikwad:UY3s687fTG3Luekk@cluster-translator.l06wjzp.mongodb.net/
+JWT_SECRET="i am a secret"
+FRONTEND_URL=http://localhost:5173
+BACKEND_URL=http://localhost:3001
