--- a/translator-b/.env
+++ b/translator-b/.env
@@ -3,3 +3,5 @@ MONGO_URI=mongodb+srv://VishalGaikwad:UY3s687fTG3Luekk@cluster-translator.l06wjz
 JWT_SECRET="i am a secret"
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3001
+
+GOOGLE_API_KEY="AIzaSyARNgPGbOHq6svrOGzE6y16cc67JmY0hms"
