--- a/translator-f/.env
+++ b/translator-f/.env
@@ -1,6 +1,6 @@
 
 
 
-VITE_BACKEND_URL="https://translator-2-1.onrender.com"
+VITE_BACKEND_URL="http://localhost:3001"
 VITE_WEBSOCKET_URL="wss://translator-2-2.onrender.com"
 
