--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -13,7 +13,9 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.2",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
     "mongoose": "^8.14.1",
     "react": "^19.0.0",
