--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -12,14 +12,19 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "filepond": "^4.32.7",
+    "filepond-plugin-file-validate-type": "^1.2.9",
     "framer-motion": "^12.6.2",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
+    "mammoth": "^1.9.0",
     "mongoose": "^8.14.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "socket.io-client": "^4.8.1",
