--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -22,7 +22,9 @@
     "mammoth": "^1.9.0",
     "mongoose": "^8.14.1",
     "pdfjs-dist": "^5.2.133",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
+    "react-dialog": "^0.1.0",
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
     "react-icons": "^5.5.0",
