--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -16,6 +16,7 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "framer-motion": "^12.6.2",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.2.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
@@ -27,6 +28,7 @@
     "react-dialog": "^0.1.0",
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "socket.io-client": "^4.8.1",
