--- a/translator-f/.env
+++ b/translator-f/.env
@@ -1,11 +1,3 @@
 
-
-
-VITE_BACKEND_URL=""
-VITE_WEBSOCKET_URL=""
-
-https://translator-2-1.onrender.com
-
-
-
-wss://translator-2-2.onrender.com
+VITE_BACKEND_URL="https://translator-2-1.onrender.com"
+VITE_WEBSOCKET_URL="wss://translator-2-2.onrender.com"
