--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -25,12 +25,14 @@
     "pdfjs-dist": "^5.2.133",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dialog": "^0.1.0",
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "tesseract.js": "^6.0.1",
     "ws": "^8.18.2"
