--- a/translator-b/package.json
+++ b/translator-b/package.json
@@ -20,12 +20,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "natural": "^8.1.0",
     "pg": "^8.14.1",
     "react-router-dom": "^7.4.0",
     "socket.io": "^4.8.1",
+    "stream": "^0.0.3",
     "uuid": "^11.1.0",
     "ws": "^8.18.2"
   },
