--- a/translator-f/package.json
+++ b/translator-f/package.json
@@ -23,6 +23,7 @@
     "mammoth": "^1.9.0",
     "mongoose": "^8.14.1",
     "pdfjs-dist": "^5.2.133",
+    "prop-types": "^15.8.1",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
