--- a/translator-f/.env
+++ b/translator-f/.env
@@ -1,3 +1,3 @@
 
-VITE_BACKEND_URL=""
+VITE_BACKEND_URL="https://translator-back-g6d4.onrender.com"
 VITE_WEBSOCKET_URL="wss://translator-2-2.onrender.com"
